# kimi

./: .gitignore  main.py  ol.txt
frontend/: package.json
frontend/src/: App.css  App.js
frontend/src/components/: data.css  data.jsx  parameters.css  parameters.jsx
genesim/: README.md  genesim.cabal  stack.yaml
genesim/src/: Gillepsie.hs  Main.hs
