name:                   genesim
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/genesim#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2018 Author name here
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable genesim
  hs-source-dirs:       src
  main-is:              Main.hs
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings
  other-modules:        Gillepsie
  build-depends:        base >= 4.7 && < 5,
                        containers,
                        time,
                        random,
                        snap-core,
                        snap-server,
                        aeson,
                        bytestring,
                        transformers,
                        deepseq 
